# rust-cli-template

./: CHANGELOG.md  Cargo.toml  Cargo.toml.liquid  LICENSE  README.md  README.template.md  README.template.md.liquid  build.rs  cSpell.json  cargo-generate.toml  post.rhai  pre.rhai
.github/workflows/: test-template.yml
github-template/workflows/: release.yml.liquid  unit-tests.yml.liquid
src/: arguments.rs  main.rs  setup.rs
